--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ layout: default
 {% for post in paginator.posts %}
 <div class="list1">
     <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-    <p>Voluptatibus ab minima culpa hic quamdelectus eos iste odio quia nam
-    </p>
+    <p>{{ post.excerpt }}</p>
+    <span>{{ post.date | date_to_string }}</span></i>
 </div>
 {% endfor %}
 
     <!-- Pagination links -->
-    <!-- {% if paginator.total_pages > 1 %}
+    {% if paginator.total_pages > 1 %}
     <ul class="pagination pagination-sm">
         {% if paginator.previous_page %}
         <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo;</a></li>
@@ -34,4 +34,4 @@ layout: default
         <li class="disabled"><span>&raquo;</span></li>
         {% endif %}
     </ul>
-    {% endif %} -->
+    {% endif %}
