--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 {% for post in paginator.posts %}
 <div class="list1">
     <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-    <p>{{ post.excerpt }}</p>
-    <span>{{ post.date | date_to_string }}</span></i>
+    <p><i class="fas fa-pencil-alt"></i> {{ post.excerpt }}</p>
+    <span><i class="far fa-clock"></i> {{ post.date | date_to_string }}</span></i>
 </div>
 {% endfor %}
 
